Refactor gral